--- a/Core/NodeJs/core/tsconfig.json
+++ b/Core/NodeJs/core/tsconfig.json
@@ -5,10 +5,5 @@
         "rootDir": "src"
     },
     "include": ["src/**/*"],
-    "references": [
-        {
-            "path": "../../../Core/NodeJs/core"
-        }
-    ]
+    "references": []
 }
-
