--- a/Transformer/NodeJs/core/package.json
+++ b/Transformer/NodeJs/core/package.json
@@ -33,5 +33,8 @@
             "^.+\\.ts$": "ts-jest"
         },
         "verbose": true
+    },
+    "dependencies": {
+        "bibliothekar-core-core": "^0.0.1"
     }
 }
