--- a/.editorconfig
+++ b/.editorconfig
@@ -99,6 +99,7 @@ ij_groovy_class_brace_style = end_of_line
 ij_groovy_class_count_to_use_import_on_demand = 5
 ij_groovy_do_while_brace_force = never
 ij_groovy_else_on_new_line = false
+ij_groovy_enable_groovydoc_formatting = true
 ij_groovy_enum_constants_wrap = off
 ij_groovy_extends_keyword_wrap = off
 ij_groovy_extends_list_wrap = off
@@ -108,9 +109,15 @@ ij_groovy_for_brace_force = never
 ij_groovy_for_statement_new_line_after_left_paren = false
 ij_groovy_for_statement_right_paren_on_new_line = false
 ij_groovy_for_statement_wrap = off
+ij_groovy_ginq_general_clause_wrap_policy = 2
+ij_groovy_ginq_having_wrap_policy = 1
+ij_groovy_ginq_indent_having_clause = true
+ij_groovy_ginq_indent_on_clause = true
+ij_groovy_ginq_on_wrap_policy = 1
+ij_groovy_ginq_space_after_keyword = true
 ij_groovy_if_brace_force = never
 ij_groovy_import_annotation_wrap = 2
-ij_groovy_imports_layout = *, |, javax.**, java.**, |, $*
+ij_groovy_imports_layout = *,|,javax.**,java.**,|,$*
 ij_groovy_indent_case_from_switch = true
 ij_groovy_indent_label_blocks = true
 ij_groovy_insert_inner_class_imports = false
@@ -131,6 +138,7 @@ ij_groovy_label_indent_size = 0
 ij_groovy_lambda_brace_style = end_of_line
 ij_groovy_layout_static_imports_separately = true
 ij_groovy_line_comment_add_space = false
+ij_groovy_line_comment_add_space_on_reformat = false
 ij_groovy_line_comment_at_first_column = true
 ij_groovy_method_annotation_wrap = split_into_lines
 ij_groovy_method_brace_style = end_of_line
@@ -140,7 +148,7 @@ ij_groovy_method_parameters_right_paren_on_new_line = false
 ij_groovy_method_parameters_wrap = off
 ij_groovy_modifier_list_wrap = false
 ij_groovy_names_count_to_use_import_on_demand = 3
-ij_groovy_packages_to_use_import_on_demand = java.awt.*, javax.swing.*
+ij_groovy_packages_to_use_import_on_demand = java.awt.*,javax.swing.*
 ij_groovy_parameter_annotation_wrap = off
 ij_groovy_parentheses_expression_new_line_after_left_paren = false
 ij_groovy_parentheses_expression_right_paren_on_new_line = false
@@ -236,7 +244,7 @@ ij_groovy_while_on_new_line = false
 ij_groovy_wrap_chain_calls_after_dot = false
 ij_groovy_wrap_long_lines = false
 
-[{*.gradle.kts,*.kt,*.kts,*.main.kts}]
+[{*.kt,*.kts}]
 ij_kotlin_align_in_columns_case_branch = false
 ij_kotlin_align_multiline_binary_operation = false
 ij_kotlin_align_multiline_extends_list = false
@@ -271,7 +279,7 @@ ij_kotlin_field_annotation_wrap = split_into_lines
 ij_kotlin_finally_on_new_line = false
 ij_kotlin_if_rparen_on_new_line = true
 ij_kotlin_import_nested_classes = false
-ij_kotlin_imports_layout = *, java.**, javax.**, kotlin.**, ^
+ij_kotlin_imports_layout = *,java.**,javax.**,kotlin.**,^
 ij_kotlin_insert_whitespaces_in_simple_one_line_method = true
 ij_kotlin_keep_blank_lines_before_right_brace = 1
 ij_kotlin_keep_blank_lines_in_code = 1
@@ -280,16 +288,17 @@ ij_kotlin_keep_first_column_comment = true
 ij_kotlin_keep_indents_on_empty_lines = false
 ij_kotlin_keep_line_breaks = true
 ij_kotlin_lbrace_on_next_line = false
+ij_kotlin_line_break_after_multiline_when_entry = false
 ij_kotlin_line_comment_add_space = false
+ij_kotlin_line_comment_add_space_on_reformat = false
 ij_kotlin_line_comment_at_first_column = true
 ij_kotlin_method_annotation_wrap = split_into_lines
 ij_kotlin_method_call_chain_wrap = normal
 ij_kotlin_method_parameters_new_line_after_left_paren = true
 ij_kotlin_method_parameters_right_paren_on_new_line = true
 ij_kotlin_method_parameters_wrap = on_every_item
-ij_kotlin_name_count_to_use_star_import = 5
-ij_kotlin_name_count_to_use_star_import_for_members = 3
-ij_kotlin_packages_to_use_import_on_demand = java.util.*, kotlinx.android.synthetic.**, io.ktor.**
+ij_kotlin_name_count_to_use_star_import = 2147483647
+ij_kotlin_name_count_to_use_star_import_for_members = 2147483647
 ij_kotlin_parameter_annotation_wrap = off
 ij_kotlin_space_after_comma = true
 ij_kotlin_space_after_extend_colon = true
