--- a/Extractor/Gradle/plugin/android/build.gradle
+++ b/Extractor/Gradle/plugin/android/build.gradle
@@ -17,6 +17,7 @@ repositories {
 dependencies {
     implementation project(':core')
     implementation Dependencies.ComAndroidToolsBuild.Gradle
+    implementation Dependencies.OrgJetbrainsKotlin.KotlinGradlePlugin
 }
 
 testing {
